# practice

./: README.md
open_ai_practice/: README.md  pyproject.toml
open_ai_practice/open_ai_practice/: function_calling.py
